plugins/groovy/testdata/highlighting/VariableDeclarationDuplicateModifiers.groovy
<error descr="Duplicate modifier 'def'">def final def</error> foo = 44